--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -138,7 +138,22 @@
             <label for="imageUploader">Upload Image Background:</label>
             <input type="file" id="imageUploader" accept="image/*">
         </div>
+        <div class="edit-controls-group">
+            <h3>Current Slide Settings</h3>
+            <label for="imageUploader">Upload Image Background:</label>
+            <input type="file" id="imageUploader" accept="image/*">
+        </div>
+
+        <div class="edit-controls-group">
+            <h3>Overlay Tools</h3>
+            <button id="addRectangleButton">Add Rectangle</button>
+            <button id="addCircleButton">Add Circle</button>
+            <!-- Add Textbox button will be added in Step 12 -->
+        </div>
         
+        <div id="fabricCanvasContainer">
+          <canvas id="fabricCanvasElement"></canvas>
+        </div>
         <div id="fabricCanvasContainer">
           <canvas id="fabricCanvasElement"></canvas>
         </div>
