added text box feature

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -143,7 +143,7 @@
             <h3>Overlay Tools</h3>
             <button id="addRectangleButton">Add Rectangle</button>
             <button id="addCircleButton">Add Circle</button>
-            <!-- Add Textbox button will be added in Step 12 -->
+            <button id="addTextboxButton">Add Text</button>
         </div>
         
         <div id="fabricCanvasContainer">
