--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -215,8 +215,8 @@
         <!-- NEW: Overlay Properties Toolbar (replaces sidebar) -->
         <div id="overlayPropertiesToolbar" style="display:none;">
             <h3>Overlay Properties</h3>
-            <div class="toolbar-sections-container"> {/* Wrapper for sections */}
-                <div class="toolbar-section"> {/* Renamed from sidebar-section */}
+            <div class="toolbar-sections-container"> 
+                <div class="toolbar-section"> 
                     <h4>Position & Size</h4>
                     <label for="objX">X:</label> <input type="number" id="objX" class="sidebar-input">
                     <label for="objY">Y:</label> <input type="number" id="objY" class="sidebar-input"><br>
@@ -225,7 +225,7 @@
                     <label for="objAngle">Angle:</label> <input type="number" id="objAngle" class="sidebar-input">
                 </div>
 
-                <div class="toolbar-section"> {/* Renamed from sidebar-section */}
+                <div class="toolbar-section"> 
                     <h4>Appearance</h4>
                     <label for="objFill">Fill Color:</label> <input type="color" id="objFill" class="sidebar-input" value="#ff0000"><br>
                     <label for="objStrokeColor">Stroke Color:</label> <input type="color" id="objStrokeColor" class="sidebar-input" value="#000000"><br>
@@ -233,13 +233,13 @@
                     <label for="objOpacity">Opacity:</label> <input type="range" id="objOpacity" min="0" max="1" step="0.01" class="sidebar-input" value="1.0">
                 </div>
                 
-                <div class="toolbar-section" id="textSpecificControls" style="display:none;"> {/* Renamed from sidebar-section */}
+                <div class="toolbar-section" id="textSpecificControls" style="display:none;"> 
                     <h4>Text</h4>
                     <label for="objTextContent">Content:</label><br>
-                    <textarea id="objTextContent" rows="3" class="sidebar-input"></textarea> {/* Removed inline style, rely on CSS */}
+                    <textarea id="objTextContent" rows="3" class="sidebar-input"></textarea> 
                 </div>
 
-                <div class="toolbar-section"> {/* Renamed from sidebar-section */}
+                <div class="toolbar-section"> 
                     <h4>Shadow</h4>
                     <label for="objShadowColor">Color:</label> <input type="color" id="objShadowColor" class="sidebar-input" value="#000000"><br>
                     <label for="objShadowBlur">Blur:</label> <input type="range" id="objShadowBlur" min="0" max="50" step="1" class="sidebar-input" value="0"><br>
