Fabric.js properly called in viewer view

--- a/Client/Viewer/ViewerView.html
+++ b/Client/Viewer/ViewerView.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <base target="_top">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script> <!-- ADD THIS LINE -->
     <title>Interactive Training Modules</title>
     <?!= include('Client/Shared/Modal_CSS'); ?>
     <style>
